# adk-textbook

./: .gitignore  CLAUDE.md  README.md  book-plan.md  pyproject.toml
adk_runtime/: __init__.py
adk_runtime/database/: __init__.py  connection.py  migrations.py  schema.py
adk_runtime/runtime/: __init__.py  adk_runtime.py
adk_runtime/services/: __init__.py  artifact_service.py  memory_service.py  session_service.py
bookfinder-agent-eval/bookfinder/: agent.py  evalset1856a8.evalset.json
nudge_middleware_plan/: ADK_EVENTS_CONTRACT.md  INDEX.md  PLAN.md  PLAN_LITREVIEW.md  README.md  README_LITREVIEW.md  SUMMARY_LITREVIEW_ADAPTATION.md  checklist.md  checklist_litreview.md
nudge_middleware_plan/examples/: glue.md
nudge_middleware_plan/ops/: telemetry_events.md
nudge_middleware_plan/prompts/: civil_discovery.txt  civil_eca.txt  civil_motions.txt  grounding_updater.txt  plan_gate.txt  targeted_help.txt
nudge_middleware_plan/schemas/: consent_log.schema.json  error_class.schema.json  grounding_box.schema.json  turn_receipt.schema.json
nudge_middleware_plan/ui/: grounding_panel_spec.md  research_grounding_panel_spec.md
textbook-adk-ch01/: README.md  chapter1.md
textbook-adk-ch01/first_agent/: first_eval_set.evalset.json  root_agent.yaml
textbook-adk-ch02/: chapter02.md  pyproject.toml
textbook-adk-ch02-archived/: README.md
textbook-adk-ch02-archived/eval/: paper_finding_eval.py
textbook-adk-ch02-archived/paper_finding/: __init__.py  agent.py  config.py  prompts.py
textbook-adk-ch02/eval/: paper_finding_eval.py
textbook-adk-ch02/paper_finding/: __init__.py  agent.py  config.py  prompts.py
textbook-adk-ch02/paperfinder/: __init__.py  agent.py  library_assistance.test.json  literature_survey.test.json  specific_paper.test.json  test_config.json
textbook-adk-ch02/tests/unit/: __init__.py  (+2 more)
textbook-adk-ch03-artifacts/artifact_agent/: agent.py
textbook-adk-ch06-runtime/: PLAN_simplified_litreview_agent.md  README.md  README_fastapi_starter.md  adk_ui_contract.md  demo_enhanced_state.py  demo_manual_state_updates.py  demo_offline_imports.py  demo_output_key.py  demo_persistent_state.py  demo_simplified_litreview.py  demo_state_delta.py  enhanced_research_agent.py  enhanced_research_tools.py  fastapi_starter.py  research_state_agent.py  test_sse_client.py
textbook-adk-ch06-runtime/enhanced_research_agent/: __init__.py  agent.py  prompts.py
textbook-adk-ch06-runtime/research_state_agent/: __init__.py  agent.py  prompts.py
textbook-adk-ch06-runtime/simplified_litreview_agent/: __init__.py  agent.py  prompts.py
textbook-adk-ch07-runtime/: .env.example  .gitignore  ARCHITECTURAL_GAP.md  DESIGN-NOTES-sync-async-analysis.md  HOW_TO_RUN.md  IMPLEMENTATION_PLAN.md  Makefile  NOTES.md  README.md  README_POSTGRES_WEB_UI.md  SCHEMA_COMPARISON.md  VERIFICATION_PLAN.md  WEB_UI_PLUGIN_SYSTEM.md  fastapi_starter.py  postgres-web.sh  pyproject.toml  requirements.txt  research_state_tools.py  run_postgres_web_ui.py  test_state_visibility.py
textbook-adk-ch07-runtime/adk_runtime/: __init__.py
textbook-adk-ch07-runtime/adk_runtime/database/: __init__.py  connection.py  migrations.py  schema.py
textbook-adk-ch07-runtime/adk_service_plugins/: cli.py  fast_api.py
textbook-adk-ch07-runtime/adk_web_ui/: pyproject.toml
textbook-adk-ch07-runtime/adk_web_ui/examples/: postgres_runtime_plugin.py  redis_memory_plugin.py
textbook-adk-ch07-runtime/adk_web_ui/src/adk_service_plugins/: __init__.py  service_loader.py
textbook-adk-ch07-runtime/docker/: docker-compose.yml  init-db.sql  init-vector-db.sql
textbook-adk-ch07-runtime/docs/: EVENT_SOURCING_GUIDE.md  TEST_PLAN.md  WEB_UI_DESIGN.md  WEB_UI_PLUGINS.md
textbook-adk-ch07-runtime/examples/: __init__.py  basic_agent.py  run_examples.py  setup_database.py  simple_usage_demo.py  test_services.py  test_web_plugin_system.py  usage_scenario.py
textbook-adk-ch07-runtime/examples/artifacts/persistent_chat_agent/example_user_456/7c017a64-5af8-4c9b-a9cf-a1963081ce3c/: example_conversation_v0.txt
textbook-adk-ch07-runtime/examples/persistent_chat_agent/: agent.py  root_agent.yaml
textbook-adk-ch07-runtime/examples/web_ui_plugins/: postgres_runtime_plugin.py  redis_memory_plugin.py
textbook-adk-ch07-runtime/migrations/: 006_adk_compatibility.sql  007_id_column_type_fix.sql  008_full_adk_compatibility.sql  008_step1_prepare.sql  008_step2_sessions.sql  008_step3_events.sql  008_step4_migrate_data.sql  008_step5_finalize.sql  009_fix_state_types.sql
textbook-adk-ch07-runtime/postgres_chat_agent/: .env.sample  README.md  __init__.py  agent.py  driver.py  main.py  root_agent.yaml  tools.py  utils.py
textbook-adk-ch07-runtime/scripts/: adk_web_postgres.py  check_migration_status.py  fast_api.py  reset_database.py  run_postgres_web_ui.py  run_postgres_web_ui.sh  start_web_with_postgres.bat  start_web_with_postgres.sh
textbook-adk-ch07-runtime/src/adk_postgres_web/: __init__.py  cli.py  fast_api.py  postgres_services.py  service_loader.py  webx_plugin.py
textbook-adk-ch07-runtime/src/adk_webx/: cli.py  fast_api.py  service_loader.py
textbook-adk-ch07-runtime/tests/: test_service_plugins.py  test_sync_async_boundary.py
textbook-adk-ch07-runtime/web_ui/: __init__.py  adk_web_with_plugins.py  plugin_system.py
textbook-adk-ch07-runtime/web_ui/plugins/: __init__.py  postgresql_plugin.py
textbook-adk-ch08-capstone/: README.md  requirements.txt  run.py  server.py
textbook-adk-ch08-capstone/agent/: __init__.py
textbook-adk-ch08-capstone/services/: __init__.py  mock_artifact_service.py  mock_memory_service.py  mock_session_service.py
textbook-adk-ch08-capstone/ui/: __init__.py  grounding_app.py  sse_client.py  styles.tcss
textbook-adk-ch08-ui/: CHAPTER_OUTLINE.md  README.md  UI_FRAMEWORKS_REPORT.md  __init__.py  adk_consumer.py  artifact_event_consumer.py  chat_app.py  event_extractor.py  minimal_consumer.py  textual_chat.py  textual_chat_new.py
textbook-adk-ch08-ui/adk_core/: __init__.py  artifact_consumer.py  chat_app.py  consumer.py  event_extractor.py
textbook-adk-ch09-mcp-code-execution/: README.md
(+83 files in other folders)
