[project]
name = "adk-textbook"
version = "0.1.0"
description = "ADK textbook examples with agents and evaluation tools"
requires-python = ">=3.11"
dependencies = [
    "google-adk[eval]>=1.13.0",
    "pydantic-settings>=2.8.1",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.3",
    "pytest-mock>=3.14.0",
    "pytest-cov>=6.0.0",
]

[tool.pytest.ini_options]
console_output_style = "progress"
addopts = "-vv -s"
testpaths = ["textbook-adk-ch01/", "textbook-adk-ch02/"]
markers = ["unit"]
log_level = "ERROR"
log_cli = false
log_auto_indent = true
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
log_cli_format = "[%(asctime)s] %(levelname)s (%(funcName)s) \t [%(pathname)s:%(lineno)d] %(message)s"
filterwarnings = ["ignore::UserWarning"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
