
[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adk-service-plugins"
version = "0.1.0"
description = "Minimal service URL loader + web CLI to plug runtime services (session/memory/artifact) for ADK."
authors = [{ name = "Chris Brew" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "click>=8.1",
  "fastapi>=0.110",
  "uvicorn>=0.23"
]

[project.scripts]
adk-webx = "adk_service_plugins.cli:web"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["adk_service_plugins"]
include-package-data = true
